--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -73,13 +73,13 @@ p {
     margin-left: 25px;
 }
 
-/* combined content divs */
-
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
+
+/* combined content divs img h2 */
 
 .content div {
     margin-bottom: 20px;
@@ -109,54 +109,23 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/* combined div h3 img under benefits */
+
+.benefits div {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefits h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
 /* changed class to footer */
 
 footer {
