added section to readme and changed div class to article

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -81,7 +81,7 @@ p {
 
 /* combined content divs img h2 */
 
-.content div {
+.content article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
